--- a/source/chart.html
+++ b/source/chart.html
@@ -69,7 +69,7 @@
         <div id="chart_left_content">
             <div id="chart_title">豆瓣电影排行榜</div>
             <div id="chart_small_title">豆瓣新片榜 · · · · · ·</div>
-            <div class="film_in">
+            <!-- <div class="film_in">
                 <div class="film_pic"><img src="" alt="" class="fime_picture"></div>
                 <div class="pic_right">
                     <div class="small_film_name">null</div>
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div id="chart_right_content">
             <div id="sort_list">
@@ -260,51 +260,51 @@
                 <div id="top_title" class="title_middle">豆瓣电影TOP250 <span>全部</span></div>
                 <div id="top_films">
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                     <div class="top_film">
-                        <div class="top_film_pic"></div>
+                        <div class="top_film_pic"><img src="" class="top_filmimg" alt=""></div>
                         <div class="top_film_name"></div>
                     </div>
                 </div>
