--- a/source/index.html
+++ b/source/index.html
@@ -247,14 +247,6 @@
                     <div class="starsAndscore"><span class="star"></span><span class="star-point">8</span></div>
                   </div>
                   <div class="hover_toptag warp">
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
                   </div>
                   <div class="hover_topwant">
                     <div class="writecomment">想看</div>
@@ -262,139 +254,14 @@
                   </div>
                 </div>
                 <div class="hover_botbox warp">
-                  nullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnull<span>null</span>
+                  <span>null</span>
                 </div>
               </div>
             </div>
             <div class="filmBigbox">
               <div></div>
               <div class="filmbbbbox">
-                <div class="filmMidbox">
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">2<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                </div>
-                <div class="filmMidbox">
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                </div>
-                <div class="filmMidbox">
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                </div>
+                
               </div>
             </div>
           </div>
@@ -429,154 +296,22 @@
                     <div class="starsAndscore"><span class="star"></span><span class="star-point">8</span></div>
                   </div>
                   <div class="hover_toptag warp">
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
-                    <div>null</div>
+
                   </div>
                   <div class="hover_topwant">
-                    <div>想看</div>
-                    <div>看过</div>
+                    <div class="writecomment">想看</div>
+                    <div class="writecomment">看过</div>
                   </div>
                 </div>
                 <div class="hover_botbox warp">
-                  nullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnullnull<span>null</span>
+                <span>null</span>
                 </div>
               </div>
             </div>
             <div class="filmBigbox">
               <div></div>
               <div class="filmbbbbox">
-                <div class="filmMidbox">
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">2<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                </div>
-                <div class="filmMidbox">
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                </div>
-                <div class="filmMidbox">
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                  <div class="filmsSmallbox">
-                    <img src="" alt="" class="filmimgbiu">
-                    <div class="filmname filmnamebiu warp">null<span class="filmpointsbiu">null</span></div>
-                  </div>
-                </div>
+                
               </div>
             </div>
           </div>
@@ -591,7 +326,6 @@
         <div id="left_04" class="left_box">
           <div class="left_min_a header_font01 box_border">
             热门推荐
-
             <div id="pro02" class="pro"><span id="pro02_left">1</span>/<span>7</span></div>
             <div id="arrowhead_2_01" class="arrowhead">
               <</div>
