--- a/source/subject.html
+++ b/source/subject.html
@@ -209,21 +209,6 @@
             <div class="int_title"><span class="file_name">null</span>的演职员 · · · · · · (<span id="actornumbers"
                     class="hoverall">全部null</span>)</div>
             <div id="film_actors">
-                <div class="actor_box">
-                    <img src="" class="actor_img" alt="">
-                    <div class="actor_name"></div>
-                    <div class="actor_pos"></div>
-                </div>
-                <div class="actor_box">
-                    <img src="" class="actor_img" alt="">
-                    <div class="actor_name"></div>
-                    <div class="actor_pos"></div>
-                </div>
-                <div class="actor_box">
-                    <img src="" class="actor_img" alt="">
-                    <div class="actor_name">null</div>
-                    <div class="actor_pos">null</div>
-                </div>
             </div>
         </div>
         <div id="comment">
@@ -293,8 +278,8 @@
             </div>
             <form id="comment_form">
                 <div id="comment_row1">
-                    <div class="jdsa"><input type="radio" name="value">想看</div>
-                    <div class="jdsa"><input type="radio" name="value">看过</div>
+                    <div class="jdsa"><input type="radio" name="want">想看</div>
+                    <div class="jdsa"><input type="radio" name="want">看过</div>
                     <div id="comment_star">给个评价吧?(可选):
                         <div id="comment_stars">
                             <div id="eva1_star">
