--- a/source/discuss.html
+++ b/source/discuss.html
@@ -10,23 +10,23 @@
 </head>
 <body>
     <div class="top">
-        <div class="index">璞嗙摚</div>
-        <div class="dsafgr"><span>路</span>鍐欒璁哄尯璇濋</div>
+        <div class="index">豆瓣</div>
+        <div class="dsafgr"><span>·</span> 写评论</div>
         <div class="dis_submit">
-            <div class="yulan">棰勮</div>
-            <div id="submit">鎻愪氦</div>
+            <div class="yulan">预览</div>
+            <div id="submit">下一步</div>
         </div>
     </div>
     <div id="film_box">
         <img src="" id="film_img" alt="">
         <div class="film_info">
-            <div id="filmname">null</div>
+            <div><div id="filmname">null</div></div>
             <div id="film_infomation">null</div>
         </div>
     </div>
-    <input type="text" id="addtitle" placeholder="娣诲姞鏍囬">
-    <textarea id="wirite" name="" placeholder="鍐欒璁哄尯璇濋..." style="resize:none" id="" cols="30" rows="10"></textarea>
+    <input type="text" id="addtitle" placeholder="添加标题">
+    <textarea id="wirite" name="" placeholder="写评论..." style="resize:none" id="" cols="30" rows="10"></textarea>
 </body>
 <script src="./js/all.js"></script>
-<script src="./js/discuss.js"></script>
+<script src="./js/discuss.js" type="module"></script>
 </html>
