--- a/source/chart.html
+++ b/source/chart.html
@@ -50,7 +50,7 @@
             </a>
             <div id="search_go">
                 <input id="search_go1" placeholder="搜索电影、电视剧、综艺，影人" type="text" />
-                <a href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></a>
+                <div href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></div>
             </div>
         </div>
         <div id="nav_3">
