--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,7 @@
       </a>
       <div id="search_go">
         <input id="search_go1" placeholder="搜索电影、电视剧、综艺，影人" type="text" />
-        <a href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></a>
+        <div href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></div>
       </div>
     </div>
     <div id="nav_3">
@@ -83,7 +83,7 @@
             </div>
             <div class="row_2">
               <div class="hover_star">
-                <div class="starsAndscore"><span class="star"></span><span class="star-point">8</span></div>
+                <div class="starsAndscore"><span class="star"></span><span class="star-point hint">8</span></div>
               </div>
               <div class="hover_people">(null)</div>
             </div>
@@ -485,7 +485,6 @@
         <div id="commentbox_title"><span id="title_contg">添加收藏：写短评</span>
             <div id="commentbox_close">x</div>
         </div>
-        <form id="comment_form">
             <div id="comment_row1">
                 <div class="jdsa"><input type="radio" name="value">想看</div>
                 <div class="jdsa"><input type="radio" name="value">看过</div>
@@ -514,7 +513,6 @@
             <div id="save">
                 <button>保存</button>
             </div>
-        </form>
     </div>
   </div>
   <div id="bottom">
