--- a/source/search.html
+++ b/source/search.html
@@ -48,7 +48,7 @@
             </a>
             <div id="search_go">
                 <input id="search_go1" placeholder="搜索电影、电视剧、综艺，影人" type="text" />
-                <a href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></a>
+                <div href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></div>
             </div>
         </div>
         <div id="nav_3">
@@ -65,32 +65,6 @@
     </div>
     <div id="search_content">
         <div id="search_title">搜索null</div>
-        <div class="search_film_box">
-            <img src="" class="search_film_img" alt="">
-            <div class="search_film_information">
-                <div class="filmnameAndYears">null</div>
-                <div class="starsAndscore"><span class="star"></span><span class="star-point">8</span><span class="starnumbers">(null人评价)</span></div>
-                <div class="film_info01">null</div>
-                <div class="film_info02">null</div>
-                <div class="wantorsee">
-                    <div class="wan">想看</div>
-                    <div class="wan">看过</div>
-                </div>
-            </div>
-        </div>
-        <div class="search_film_box">
-            <img src="" class="search_film_img" alt="">
-            <div class="search_film_information">
-                <span class="filmnameAndYears">null</span>
-                <div class="starsAndscore"><span class="star"></span><span class="star-point">8</span><span class="starnumbers">(null人评价)</span></div>
-                <div class="film_info01">null</div>
-                <div class="film_info02">null</div>
-                <div class="wantorsee">
-                    <div class="wan">想看</div>
-                    <div class="wan">看过</div>
-                </div>
-            </div>
-        </div>
     </div>
     <div id="commentboxborder">
         <div id="commentbox">
