--- a/source/subject.html
+++ b/source/subject.html
@@ -50,7 +50,7 @@
             </a>
             <div id="search_go">
                 <input id="search_go1" placeholder="搜索电影、电视剧、综艺，影人" type="text" />
-                <a href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></a>
+                <div href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></div>
             </div>
         </div>
         <div id="nav_3">
@@ -219,50 +219,12 @@
             <div id="comment_top">
                 <span style="color:black;">热门</span>/<span>最新</span>/<span>好友</span>
             </div>
-            <div class="comment_information">
-                <div class="ci_r1">
-                    <div class="username">null</div>看过
-                    <div class="starsAndscore"><span class="star"></span></div>
-                    <div class="comment_time">null</div>
-                </div>
-                <span class="comment_in">null</span>
-            </div>
-            <div class="comment_information">
-                <div class="ci_r1">
-                    <div class="username">null</div>看过
-                    <div class="starsAndscore"><span class="star"></span></div>
-                    <div class="comment_time">null</div>
-                </div>
-                <span class="comment_in">null</span>
-            </div>
-            <div class="comment_information">
-                <div class="ci_r1">
-                    <div class="username">null</div>看过
-                    <div class="starsAndscore"><span class="star"></span></div>
-                    <div class="comment_time">null</div>
-                </div>
-                <span class="comment_in">null</span>
-            </div>
+
         </div>
         <div class="discusstion">
             <div class="int_title sdadf"><span class="file_name">null</span>讨论区 · · · · · · (<span id="actornumbers"
                 class="hoverall">全部null条</span>) <div id="adddis" ><img
                     src="./pictures/subject/write.png" alt="">添加新讨论区</div>
-            </div>
-            <div class="dis_r1">
-                <div class="dis_title">null</div>
-                <div class="dis_user">来自<span>null</span></div>
-                <div class="dis_time">null</div>
-            </div>
-            <div class="dis_r1">
-                <div class="dis_title">null</div>
-                <div class="dis_user">来自<span>null</span></div>
-                <div class="dis_time">null</div>
-            </div>
-            <div class="dis_r1">
-                <div class="dis_title">null</div>
-                <div class="dis_user">来自<span>null</span></div>
-                <div class="dis_time">null</div>
             </div>
         </div>
     </div>
@@ -276,7 +238,6 @@
             <div id="commentbox_title"><span id="title_contg">添加收藏：写短评</span>
                 <div id="commentbox_close">x</div>
             </div>
-            <form id="comment_form">
                 <div id="comment_row1">
                     <div class="jdsa"><input type="radio" name="want">想看</div>
                     <div class="jdsa"><input type="radio" name="want">看过</div>
@@ -305,7 +266,6 @@
                 <div id="save">
                     <button>保存</button>
                 </div>
-            </form>
         </div>
     </div>
     <div id="bottom">
